--- a/notes/src/main/resources/application.properties
+++ b/notes/src/main/resources/application.properties
@@ -2,3 +2,10 @@ spring.application.name=notes
 
 spring.security.user.name=user
 spring.security.user.password=pass
+
+spring.datasource.url=jdbc:mysql://localhost:3306/securenotes
+spring.datasource.username=dev_user
+spring.datasource.password=pass
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
