--- a/notes/pom.xml
+++ b/notes/pom.xml
@@ -59,7 +59,6 @@
 	    <dependency>
 	        <groupId>org.projectlombok</groupId>
 	        <artifactId>lombok</artifactId>
-	        <scope>annotationProcessor</scope>
 	    </dependency>
 	    <dependency>
 	        <groupId>org.springframework.boot</groupId>
@@ -76,6 +75,14 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+					<excludes>
+						<exclude>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+						</exclude>
+					</excludes>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
