--- a/notes/src/main/resources/application.properties
+++ b/notes/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.datasource.password=pass
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+logging.level.org.springframework.security=DEBUG
