--- a/notes/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/notes/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -9,6 +9,11 @@
             "name": "spring.app.jwtExpirationMs",
             "type": "java.lang.String",
             "description": "A description for 'spring.app.jwtExpirationMs'"
+        },
+        {
+            "name": "frontend.url",
+            "type": "java.lang.String",
+            "description": "A description for 'frontend.url'"
         }
     ]
 }
